--- a/_posts/2016-06-14-213921.markdown
+++ b/_posts/2016-06-14-213921.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "How to prove the  Bayesian Model Selection Consistency in Linear Models"
+title: "How to prove the  Bayesian Model Selection Consistency in Linear Models for High-dimensional Settings"
 output: html_document
 comments: true
 ---
