--- a/_posts/2016-07-02-120519.markdown
+++ b/_posts/2016-07-02-120519.markdown
@@ -38,7 +38,7 @@ The resulting estimators have closed forms as
 
 $$
  \begin{eqnarray*}
- \widehat \theta_{L_0} &=&  \begin{cases} a\\
+ \widehat \theta_{L_0} &=&  \begin{cases} 0,\:\:\mbox{ if $|\bar y|< \lambda/n $}\\
  s\\
  \end{cases}
  \\
