--- a/_posts/2016-07-02-120519.markdown
+++ b/_posts/2016-07-02-120519.markdown
@@ -42,8 +42,11 @@ $$
  \bar y,\:\:\mbox{ if $|\bar y|\geq (\lambda/n)^{1/2} $}
  \end{cases}
  \\
-   \widehat \theta_{L_1} &=&  \underset{\theta}{\operatorname{argmin}} n (\bar y -\theta)^2 + \lambda |\theta|\\
- \widehat \theta_{L_2} &=&  \underset{\theta}{\operatorname{argmin}} n (\bar y -\theta)^2 + \lambda \theta^2.
+   \widehat \theta_{L_1} &=&  \begin{cases} 0,\:\:\mbox{ if $|\bar y|< (\lambda/n)^{1/2} $}\\
+ \bar y - sign(\bar y),\:\:\mbox{ if $|\bar y|\geq (\lambda/n)^{1/2} $}
+ \end{cases}
+ \\
+ \widehat \theta_{L_2} &=& \frac{n}{n+\lambda}\bar y,
  \end{eqnarray*}
 $$
 
