--- a/_posts/2016-07-02-120519.markdown
+++ b/_posts/2016-07-02-120519.markdown
@@ -34,7 +34,7 @@ $$
  \end{eqnarray*}
 $$
   
-The resulting estimators have closed forms as 
+The resulting estimators have explicit forms as 
 
 $$
  \begin{eqnarray*}
