--- a/_posts/2016-07-02-120519.markdown
+++ b/_posts/2016-07-02-120519.markdown
@@ -43,13 +43,14 @@ $$
  \end{cases}
  ,\\
    \widehat \theta_{L_1} &=&  \begin{cases} 0,\:\:\mbox{ if $|\bar y|< \lambda/n $}\\
- \bar y - sign(\bar y),\:\:\mbox{ if $|\bar y|\geq \lambda/n $}
+ \bar y - \frac{\lambda}{n}sgn(\bar y),\:\:\mbox{ if $|\bar y|\geq \lambda/n $}
  \end{cases}
 , \\
  \widehat \theta_{L_2} &=& \frac{n}{n+\lambda}\bar y,
  \end{eqnarray*}
 $$
 
+where $$sgn(\cdot)$$ is the sign function.
 
 
 
