--- a/_posts/2016-07-02-120519.markdown
+++ b/_posts/2016-07-02-120519.markdown
@@ -39,18 +39,14 @@ The resulting estimators have explicit forms as
 $$
  \begin{eqnarray*}
  \widehat \theta_{L_0} &=&  \begin{cases} 0,\:\:\mbox{ if $|\bar y|< (\lambda/n)^{1/2} $}\\
- \bar y,\:\:\mbox{ if $|\bar y|\geq (\lambda/n)^{1/2} $}
+ \bar y,\:\:\mbox{ if $|\bar y|\geq (\lambda/n)^{1/2} $}\\
  \end{cases}
  ,\\
-
- \medskip
 
    \widehat \theta_{L_1} &=&  \begin{cases} 0,\:\:\mbox{ if $|\bar y|< \lambda/n $}\\
  \bar y - \frac{\lambda}{n}sgn(\bar y),\:\:\mbox{ if $|\bar y|\geq \lambda/n $}
  \end{cases}
 , \\
-
-\medskip
 
  \widehat \theta_{L_2} &=& \frac{n}{n+\lambda}\bar y,
  \end{eqnarray*}
