--- a/_posts/2016-07-02-120519.markdown
+++ b/_posts/2016-07-02-120519.markdown
@@ -56,7 +56,8 @@ where $$sgn(\cdot)$$ is the sign function.
 
 Figure 1 illustrates the above estimators according to varying $$\bar y$$.
 
-![look at me](post/figure/1.png){#sealA width=50%}
+![look at me](post/figure/1.png)
+
 Caption : lasdjflk
 
 
