--- a/_posts/2016-07-02-120519.markdown
+++ b/_posts/2016-07-02-120519.markdown
@@ -58,7 +58,7 @@ Figure 1 illustrates the above estimators according to varying $$\bar y$$.
 
 ![look at me](1.png)
 
-Caption : lasdjflk
+Caption : slkjelfjiaaa
 
 
 
