--- a/_posts/2016-07-02-120519.markdown
+++ b/_posts/2016-07-02-120519.markdown
@@ -56,7 +56,7 @@ where $$sgn(\cdot)$$ is the sign function.
 
 Figure 1 illustrates the above estimators according to varying $$\bar y$$.
 
-#### Figure: this text is ignored {#figure1}
+#### Figure 1: {#figure1}
 
 ![look at me](/assets/penalty2.pdf)
 
