--- a/_posts/2016-07-02-120519.markdown
+++ b/_posts/2016-07-02-120519.markdown
@@ -54,11 +54,12 @@ $$
 
 where $$sgn(\cdot)$$ is the sign function. 
 
-Figure 1 illustrates the above estimators according to varying $$\bar y$$.
+To help the understainding, I attached Figure 1 that illustrates the above estimators according to varying $$\bar y$$.
 
-## Figure 1: the sample mean $$\bar y$$ versus the penalized estimators $$\widehat \theta$$: $$L_0$$ penalized estimator (left), $$L_1$$ penalized estimator (middle), and $$L_2$$ penalized estimator (right).
+##### Figure 1: the sample mean $$\bar y$$ versus the penalized estimators $$\widehat \theta$$: $$L_0$$ penalized estimator (left), $$L_1$$ penalized estimator (middle), and $$L_2$$ penalized estimator (right).
 
 ![look at me](/assets/penalty2.pdf)
+
 
 
 
