--- a/_posts/2016-07-02-120519.markdown
+++ b/_posts/2016-07-02-120519.markdown
@@ -60,7 +60,9 @@ To help the understainding, I attached Figure 1 that illustrates the above estim
 
 ![look at me](/assets/penalty2.pdf)
 
- It is clear that the $$L_2$$ penalized estimators is not a sparse estimator, which could result in an exactly zero estimated value, since regardless of $$\bar y$$ the estimator $$\theta_{L_2}$$ is always non-zero.
+ It is clear that the $$L_2$$ penalized estimators (right) is not a sparse estimator, which could result in an exactly zero estimated value, since regardless of $$\bar y$$ the estimator $$\theta_{L_2}$$ is always non-zero.
+ 
+ 
 
 
 
