--- a/_posts/2016-07-02-120519.markdown
+++ b/_posts/2016-07-02-120519.markdown
@@ -9,7 +9,7 @@ Penalized likelihood methods have been popular in many statistical inference pro
 Suppose that the likelihood of the observed data is denoted by $$L(y\mid\theta)$$  with the parameter of interest $$\theta$$. The estimator can be expressed in the following:
 
 $$
-\widehat{\theta} = \underset{\theta}{\operatorname{argmin}} -2\times L(y\mid \theta) + p_\lambda(\theta),
+\widehat{\theta} = \underset{\theta}{\operatorname{argmin}} -2\times \log L(y\mid \theta) + p_\lambda(\theta),
 $$   
 
  where $$p_\lambda(\cdot)$$ is the penalty function with the tuning parameter $$\lambda$$ that controls the strength of the penalty. The only difference between the maximum likelihood estimator and the penalized maximum likelihood estimator is that the objective function of the penalized version contains the penalty part $$p_\lambda(\theta)$$, while that of the maximum likelihood estimator doesn't. 
@@ -66,9 +66,15 @@ To help the understainding, I attached Figure 1 that illustrates the above estim
 
  In the previous section, I mentioned that the $$L_0$$ and $$L_1$$ penalized estimators are sparse estimators, but the $$L_2$$ penalized estimator is not. The sparsity is useful when we have to consider model selection problems, since in many settings a sparsity pattern of the parameters determines a model, for example in linear regression models the zero regression parameters indicates that the corresponding independent variables are irrelavant to the response in the regression model. Then, next natural question is "**Which one is better among the $$L_0$$ and $$L_1$$ penalized estimators?**" 
  
- My answer is that the $$L_0$$ is better, if possible.   
+ My answer is that the $$L_0$$ is better, if it's computationally possible.   
   
-The $$L_0$$ penalized estimator enjoys some desirable properties such as the oracle properties: [Yongdai Kim](http://oldstat.snu.ac.kr/ydkim/)'s great explanation of this concept is in [this slides](https://www.birs.ca/workshops/2011/11w5051/files/12_yongdai_kim_on_weak_and_strong_oracle_property.pdf), while the $$L_1$$ estimator fails to achieve this. The theoretical result is possible, because the $$L_0$$ estimator is unbiased. However, when we consider a large number of  parameters, sometimes larger than the sample size, it is computationally impossible 
+ The $$L_0$$ penalized estimator enjoys some desirable properties such as the oracle properties: [Yongdai Kim](http://oldstat.snu.ac.kr/ydkim/)'s great explanation of this concept is in [this slides](https://www.birs.ca/workshops/2011/11w5051/files/12_yongdai_kim_on_weak_and_strong_oracle_property.pdf), while the $$L_1$$ estimator fails to achieve this in linear model settings, since the $$L_1$$ penalized estimator is baised. However, when we consider a large number of  parameters, sometimes larger than the sample size, it is computationally very demanding to find the solution of the $$L_0$$ penalized objective function; it is a so-called NP-hard problem. On the other hand, the $$L_1$$ penalty function $$\vert\theta\vert$$ is convex for multi-dimensional $$\theta \in \mathbb{R}^d$$ for some large positive integer $$d$$, the resulting optimization is also convex when the $$-2\times \log L(y\mid \theta)$$ is convex. Convex optimizations not only quarantee to search the global minimizer, but also there are a rich amount of reliable optimization algorithms to attack this problem.    
+ 
+ 
+ 
+ 
+ 
+ 
  
 
 
