--- a/_posts/2016-07-02-120519.markdown
+++ b/_posts/2016-07-02-120519.markdown
@@ -66,9 +66,9 @@ To help the understainding, I attached Figure 1 that illustrates the above estim
 
  In the previous section, I mentioned that the $$L_0$$ and $$L_1$$ penalized estimators are sparse estimators, but the $$L_2$$ penalized estimator is not. The sparsity is useful when we have to consider model selection problems, since in many settings a sparsity pattern of the parameters determines a model, for example in linear regression models the zero regression parameters indicates that the corresponding independent variables are irrelavant to the response in the regression model. Then, next natural question is "**Which one is better among the $$L_0$$ and $$L_1$$ penalized estimators?**" 
  
- My answer is that the $$L_0$$ is better, if it's computationally possible.   
+ My answer is that the $$L_0$$ is better than the $$L_1$$, if it's computationally possible.   
   
- By choosing appropriate rate of $$\lambda$$, the $$L_0$$ penalized estimator enjoys some desirable properties such as the oracle properties: [Yongdai Kim](http://oldstat.snu.ac.kr/ydkim/)'s great explanation of this concept is in [this slides](https://www.birs.ca/workshops/2011/11w5051/files/12_yongdai_kim_on_weak_and_strong_oracle_property.pdf), while the $$L_1$$ estimator fails to achieve this in linear model settings, since the $$L_1$$ penalized estimator is baised. However, when we consider a large number of  parameters, sometimes larger than the sample size, it is computationally very demanding to find the solution of the $$L_0$$ penalized objective function; it is so-called a NP-hard problem. On the other hand, the $$L_1$$ penalty function $$\vert\theta\vert$$ is convex for multi-dimensional $$\theta \in \mathbb{R}^d$$ for some large positive integer $$d$$, the resulting optimization is also convex when the $$-2\times \log L(y\mid \theta)$$ is convex. Convex optimizations not only guarantee the global minimizer, but also there are a rich amount of reliable optimization algorithms to attack this problem, for example [the coordinate descent algorithms](https://arxiv.org/pdf/0803.3876.pdf), [the ADMM](http://arxiv.org/pdf/1208.3922v3.pdf), [the proximal algorithms](https://web.stanford.edu/~boyd/papers/pdf/prox_algs.pdf), and etc. For linear regression models with $$L_1$$ penalty (so-called LASSO), [the Least Angle RegreSsion (LARS)](https://web.stanford.edu/~hastie/Papers/LARS/LeastAngle_2002.pdf) algorithm provides a very fast and scalable computation. I will discuss the details in following posts.    
+ By choosing appropriate rate of $$\lambda$$, the $$L_0$$ penalized estimator enjoys some desirable properties such as the oracle properties: [Yongdai Kim](http://oldstat.snu.ac.kr/ydkim/)'s great explanation of this concept is in [this slides](https://www.birs.ca/workshops/2011/11w5051/files/12_yongdai_kim_on_weak_and_strong_oracle_property.pdf), while the $$L_1$$ estimator fails to achieve this in linear model settings, since the $$L_1$$ penalized estimator is biased. However, when we consider a large number of  parameters, sometimes larger than the sample size, it is computationally very demanding to find the solution of the $$L_0$$ penalized objective function; it is so-called a NP-hard problem. On the other hand, the $$L_1$$ penalty function $$\vert\theta\vert$$ is convex for multi-dimensional $$\theta \in \mathbb{R}^d$$ for some large positive integer $$d$$, the resulting optimization is also convex when the $$-2\times \log L(y\mid \theta)$$ is convex. Convex optimizations not only guarantee the global minimizer, but also there are a rich amount of reliable optimization algorithms to attack this problem, for example [the coordinate descent algorithms](https://arxiv.org/pdf/0803.3876.pdf), [the ADMM](http://arxiv.org/pdf/1208.3922v3.pdf), [the proximal algorithms](https://web.stanford.edu/~boyd/papers/pdf/prox_algs.pdf), and etc. For linear regression models with $$L_1$$ penalty (so-called LASSO), [the Least Angle RegreSsion (LARS)](https://web.stanford.edu/~hastie/Papers/LARS/LeastAngle_2002.pdf) algorithm provides a very fast and scalable computation. I will discuss the details in following posts.    
  
  
 #### $$L_2$$ penalties are still important in many cases. 
