--- a/_posts/2016-07-02-120519.markdown
+++ b/_posts/2016-07-02-120519.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Penalized Likelihood Estimators and Shrinkage Priors: $$L_0,\:\: L_1,\:\:\mbox{and}\:\: L_2$$ Penalties"
+title: "Penalized Likelihood Estimators and Shrinkage Priors (1)"
 
 comments: true
 ---
